# muxtools-binaries

./: .gitignore  README.md  pyproject.toml  release.py  run-builds.py  versions.json
.github/workflows/: run-builds.yml
projects/fdkaac/: build-linux.sh  build-win-mingw64.sh  build.py  meta.py
projects/ffmpeg/: build.py  meta.py
projects/mkvtoolnix/: build.py  meta.py
projects/xiph/: build-linux.sh  build.py  meta.py  repack-windows.py
utils/: pyproject.toml
utils/src/utils/: __init__.py  checks.py  dataclasses.py  download.py  processes.py
